--- a/contact.html
+++ b/contact.html
@@ -9,8 +9,10 @@
     <title>Document</title>
 </head>
 <body>
+    
     <nav>
         <div class="background-to-nav">
+            <!--nav bar dropdown menu for mobile-->
             <ul class="d-block d-sm-none nav nav-tabs">
                 <li class="nav-item">
                     <a class="nav-link active dropdown dropdown-toggle" href="contact.html" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Contact</a>
@@ -21,7 +23,7 @@
                     </div>
                 </li>
             </ul>
-
+            <!--nav bar main menu for larger screens-->
             <ul class="d-none d-sm-block menu">
                 <li>
                     <a href="index.html">Home</a>
@@ -39,6 +41,7 @@
         </div>
     </nav>
     <section>
+        <!--Form - n.b. after 768px screen now reverts to 500px width to prevent getting too wide-->
         <h1 class="form-header">Interested in learning more?</h1>
         <h2 class="form-h2-header">Fill in the following form and we will respond with information about ringing near you</h2>
         <div class="form-holder">
@@ -90,22 +93,24 @@
                     <label for="accessibility">Do you have any accessbility issues (e.g. cannot climb stairs to a belfry)?</label>
                     <textarea name="accessibility" class="form-control" id="accessibility" rows="2" required></textarea>
                 </div> <br>
+                <!--below button does not link correctly to completed_form.html - known issue-->
                 <button type="submit" class="btn btn-primary"><a href="completed_form.html">Submit</a></button>
             </form>
         </div>
     </section>
     <footer>
-      <ul class="social-networks">
-        <li>
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a>
-        </li>
-      </ul>
+        <!--footer - used for social media links-->
+        <ul class="social-networks">
+            <li>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
     </footer>
 <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
