--- a/gallery.html
+++ b/gallery.html
@@ -12,6 +12,7 @@
     <section>
         <nav>
             <div class="background-to-nav">
+                <!--nav bar dropdown menu for mobile-->
                 <ul class="d-block d-sm-none nav nav-tabs">
                     <li class="nav-item">
                         <a class="nav-link active dropdown dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Gallery</a>
@@ -22,7 +23,7 @@
                         </div>
                     </li>
                 </ul>
-
+                <!--nav bar main menu for larger screens-->
                 <ul class="d-none d-sm-block menu">
                     <li>
                         <a href="index.html">Home</a>
@@ -41,6 +42,7 @@
         </nav>
     </section>
     <section>
+        <!--reduces to 2 columns wide for pics at screens 992px and smaller-->
         <div class="gallery-pics">
             <img src="assets/images/ringers_happy.jpeg" class="image" alt="An image of happy bell ringers">
             <img src="assets/images/alverstoke3.jpg" class="image" alt="An image of Alverstoke church, in Gosport, Hampshire">
@@ -56,17 +58,18 @@
         </div>
     </section>
     <footer>
-      <ul class="social-networks">
-        <li>
-            <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
-        </li>
-        <li>
-            <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a>
-        </li>
-      </ul>
+        <!--footer - used for social media links-->
+        <ul class="social-networks">
+            <li>
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter-square"></i></a>
+            </li>
+            <li>
+                <a href="https://www.youtube.com" target="_blank"><i class="fab fa-youtube-square"></i></a>
+            </li>
+        </ul>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx" crossorigin="anonymous"></script>
